force-app/main/default/objects/Product_Master__c/Product_Master__c.object-meta.xml
<CustomObject>
    <label>Product Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>