force-app/main/default/objects/Product_Master__c/fields/BL_Minimum_ROI__c.field-meta.xml
<CustomField>
    <fullName>BL_Minimum_ROI__c</fullName>
    <label>Minimum ROI(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>