force-app/main/default/objects/Product_Master__c/fields/BL_RCU_Required__c.field-meta.xml
<CustomField>
    <fullName>BL_RCU_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RCU Required</label>
    <type>Checkbox</type>
</CustomField>