force-app/main/default/objects/Product_Master__c/fields/CoApplicant_Applicant_Office_FI_Mandator__c.field-meta.xml
<CustomField>
    <fullName>CoApplicant_Applicant_Office_FI_Mandator__c</fullName>
    <label>CoApplicant Applicant Office FI Mandator</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propertioship</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Public Ltd</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>