force-app/main/default/objects/Product_Master__c/fields/Credit_Assessment_Method__c.field-meta.xml
<CustomField>
    <fullName>Credit_Assessment_Method__c</fullName>
    <label>Credit Assessment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Viability-CV</fullName>
            </value>
            <value>
                <fullName>Viability-CE</fullName>
            </value>
            <value>
                <fullName>FFR</fullName>
            </value>
            <value>
                <fullName>Hire vs Buy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>