force-app/main/default/objects/Product_Master__c/fields/Primary_applicant_Office_FI_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Primary_applicant_Office_FI_Mandatory__c</fullName>
    <label>Primary applicant Office FI Mandatory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propertioship</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Public Ltd</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>