force-app/main/default/objects/Product_Master__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV-New</fullName>
            </value>
            <value>
                <fullName>CE-New</fullName>
            </value>
            <value>
                <fullName>CV-Used</fullName>
            </value>
            <value>
                <fullName>CE-Used</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>