force-app/main/default/objects/Product_Master__c/listViews/All_Business_Loan_Products.listView-meta.xml
<ListView>
    <fullName>All_Business_Loan_Products</fullName>
    <columns>NAME</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Sub_Category__c</columns>
    <columns>Product_Schemes__c</columns>
    <columns>Active__c</columns>
    <columns>BL_Minimum_ROI__c</columns>
    <columns>BL_Maximum_ROI__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LOB__c</field>
        <operation>equals</operation>
        <value>BL</value>
    </filters>
    <label>All Business Loan Products</label>
</ListView>